--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><script src="https://cdn.jsdelivr.net/npm/theaterjs@latest/dist/theater.min.js"></script><link rel="manifest" href="/manifest.json"/><title>Udana Senanayake</title><script defer="defer" src="/static/js/main.c8b92b66.js"></script><link href="/static/css/main.81b8751d.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Primary SEO -->
+  <title>Udana Senanayake | Cybersecurity & DevOps Portfolio Sri Lanka</title>
+
+  <meta name="description"
+    content="Official portfolio of Udana Senanayake, a Cybersecurity and DevOps enthusiast from Sri Lanka. Explore projects in ethical hacking, network security, DevOps, and software engineering." />
+
+  <meta name="keywords"
+    content="Udana Senanayake, Senanayake, Budhvin, Buddi, Udana, cybersecurity, ethical hacking, devops, personal portfolio, Udana vlogs, networking, Sri Lanka, cyber security Sri Lanka, network security Sri Lanka, Lanka" />
+
+  <meta name="author" content="Udana Senanayake" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://udanadev.me/" />
+
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title"
+    content="Udana Senanayake | Cybersecurity & DevOps Portfolio" />
+  <meta property="og:description"
+    content="Cybersecurity, DevOps, Ethical Hacking and Networking projects by Udana Senanayake from Sri Lanka." />
+  <meta property="og:url" content="https://udanadev.me" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Udana Senanayake Portfolio" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title"
+    content="Udana Senanayake | Cybersecurity Portfolio" />
+  <meta name="twitter:description"
+    content="Cybersecurity & DevOps projects from Sri Lanka." />
+
+  <!-- Favicon & Manifest -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/logo192.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#000000" />
+
+  <!-- Performance: Preconnect Firebase -->
+  <link rel="preconnect" href="https://identitytoolkit.googleapis.com" crossorigin />
+  <link rel="preconnect" href="https://firestore.googleapis.com" crossorigin />
+
+  <!-- Structured Data for Google -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Udana Senanayake",
+
+    "url": "https://udanadev.me",
+    "jobTitle": "Cybersecurity & DevOps Enthusiast",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "Sri Lanka"
+    },
+    "sameAs": [
+      "https://github.com/udana-gits",
+      "https://www.linkedin.com/in/udana-senanayake-362641263"
+    ]
+  }
+  </script>
+
+  <!-- Optional TheaterJS -->
+  <script src="https://cdn.jsdelivr.net/npm/theaterjs@latest/dist/theater.min.js"></script>
+
+  <!-- React App -->
+  <link href="/static/css/main.81b8751d.css" rel="stylesheet" />
+  <script defer src="/static/js/main.c8b92b66.js"></script>
+
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+</html>
